--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+@font-face {
+font-family: 'DIN Alternate Bold';
+src:url("../font/DIN Alternate Bold.ttf") format("truetype"),
+}
 html{
     font-size: 62.5%;
     overflow-x: hidden;
